# AshDB

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt  README.md  bench_basic.cpp  bench_batch.cpp
doc/: README.md
examples/: CMakeLists.txt  example1.cpp  example2.cpp
include/ashdb/: ashdb.h  options.h  primitives.h  status.h
src/: CMakeLists.txt  ashdb.cpp  status.cpp
tests/: CMakeLists.txt  Person.h  README.md  Test.h  test_basic.cpp  test_batch.cpp  test_class1.cpp  test_class1.h  test_truncate.cpp
